# MKLogging

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Jenkinsfile  MkLogging.sln  README.md  generate-source-dist.bat
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
.github/workflows/: ci-linux.yml  ci-windows.yml  ci.yml  msbuild.yml
LogShared/: ELogLevel.cpp  ErrorMessages.cpp  LogCentral.cpp  LogCentral.h  LogConsoleSink.h  LogDebugOutputSink.cpp  LogDebugOutputSink.h  LogQueue.cpp  LogQueue.h  LogShared.vcxitems  LogStatement.h  LogUtf8FileSink.h  Logger.h  StringUtils.cpp
LogTest/: LogTest.vcxproj  MockLogSink.h  TestLogFileRotation.cpp  TestLogQueue.cpp  TestLogger.cpp  main.cpp  test.cpp
MKLoggingFiles/: CMakeLists.txt  ELogLevel.cpp  ELogLevel.h  ErrorMessages.h  EventSource.h  FileSystemUtils.cpp  FileSystemUtils.h  ILogSink.h  LogCentral.cpp  LogCentral.h  LogConsoleSink.cpp  LogConsoleSink.h  LogDebugOutputSink.cpp  LogDebugOutputSink.h  LogEnterLeave.cpp  LogEnterLeave.h  LogFileSink.cpp  LogFileSink.h  LogFormatter.cpp  LogFormatter.h  LogOutputStreamSink.cpp  LogOutputStreamSink.h  LogQueue.cpp  LogQueue.h  LogRecord.cpp  LogRecord.h  LogRecordAutoSink.cpp  LogRecordAutoSink.h  LogRotatingFileSink.cpp  LogRotatingFileSink.h  LogSinkBase.cpp  LogSinkWithFormatter.cpp  LogSinkWithFormatter.h  LogStatement.cpp  LogStatement.h  LogUnbufferedFileSink.cpp  LogUnbufferedFileSink.h  LogUtf8FileSink.cpp  LogUtf8FileSink.h  LogUtf8UnbufferedFileSink.cpp  (+6 more)
MKLoggingFiles/Windows/: LogDebugOutputSink.cpp  LogDebugOutputSink.h
MKLoggingTest/: CMakeLists.txt  FakeFileLogSink.cpp  FakeFileLogSink.h  FakeStringLogSink.h  MKLoggingTest.vcxproj  MockLogSink.h  PerformanceTest.cpp  StringUtils.cpp  StringUtils.h  TestErrorMessages.cpp  TestLogFileSink.cpp  TestLogFormatters.cpp  TestLogHex.cpp  TestLogQueue.cpp  TestLogger.cpp  TestLogger.cpp.bak  TestRotatingFileSink.cpp  TestUnbufferedFileSink.cpp  TestUtils.cpp  TestUtils.h  main.cpp
ModuleTest/: ELogLevel.cpp  ELogLevel.ixx  EventSource.ixx  FileSystemUtils.cpp  FileSystemUtils.ixx  ILogSink.ixx  LogDebugOutputSink.cpp  LogDebugOutputSink.ixx  LogEnterLeave.cpp  LogEnterLeave.h  LogEnterLeave.ixx  LogFileSink.cpp  LogFileSink.ixx  LogFormatter.cpp  LogFormatter.ixx  LogHelpers.h  LogOutputStreamSink.cpp  LogOutputStreamSink.ixx  LogQueue.cpp  LogQueue.ixx  LogRecord.cpp  LogRecord.ixx  LogRecordAutoSink.cpp  LogRecordAutoSink.ixx  LogRotatingFileSink.cpp  LogRotatingFileSink.ixx  LogSinkWithFormatter.cpp  LogSinkWithFormatter.ixx  LogUnbufferedFileSink.cpp  LogUnbufferedFileSink.ixx  Logger.cpp  Logger.h  Logger.ixx  MockLogSink.h  ModuleTest.vcxproj  PerformanceTest.cpp  StreamHelpers.cpp  StringUtils.cpp  StringUtils.h  TestLogFileSink.cpp  (+11 more)
build-container/: Dockerfile
cmake/: AddGitSubmodule.cmake  FixateVersion.cmake  MKLoggingConfig.cmake.in  Version.h.in
include/: CMakeLists.txt
include/MKLogging/: CMakeLists.txt  Config.h  ELogLevel.h  EventSource.h  FileSystemUtils.h  ILogSink.h  LogEnterLeave.h  LogFileSink.h  LogFormatter.h  LogOutputStreamSink.h  LogQueue.h  LogRecord.h  LogRecordAutoSink.h  LogRotatingFileSink.h  LogSinkWithFormatter.h  LogUnbufferedFileSink.h  Logger.h
include/MKLogging/Windows/: CMakeLists.txt  LogDebugOutputSink.h
jenkins-windows-build-container/: Dockerfile
src/: CMakeLists.txt  ELogLevel.cpp  FileSystemUtils.cpp  LogDebugOutputSink.cpp  LogEnterLeave.cpp  LogFileSink.cpp  LogFormatter.cpp  LogOutputStreamSink.cpp  LogQueue.cpp  LogRecord.cpp  LogRecordAutoSink.cpp  LogRotatingFileSink.cpp  LogSinkWithFormatter.cpp  LogUnbufferedFileSink.cpp  Logger.cpp
test/: CMakeLists.txt  FakeFileLogSink.cpp  FakeFileLogSink.h  FakeStringLogSink.h  MockLogSink.h  PerformanceTest.cpp  StringUtils.cpp  TestELogLevel.cpp  TestLogFileSink.cpp  TestLogFormatters.cpp  TestLogHex.cpp  TestLogQueue.cpp  TestLogger.cpp  TestRotatingFileSink.cpp  TestUnbufferedFileSink.cpp  TestUtils.cpp  TestUtils.h  VersionTest.cpp  main.cpp
test-c++17/: CMakeLists.txt  FakeFileLogSink.cpp  FakeFileLogSink.h  FakeStringLogSink.h  MockLogSink.h  PerformanceTest.cpp  StringUtils.h  TestELogLevel.cpp  TestLogFileSink.cpp  TestLogFormatters.cpp  TestLogHex.cpp  TestLogQueue.cpp  TestLogger.cpp  TestRotatingFileSink.cpp  TestUtils.h  VersionTest.cpp
test-c++20/: CMakeLists.txt  StringUtils.cpp  TestSourceLocation.cpp
test20/: CMakeLists.txt  TestSourceLocation.cpp
